fix ring color on dark mode

--- a/app/app.css
+++ b/app/app.css
@@ -64,7 +64,7 @@
     --highlight: 210 15% 30%;
     --border: 220 10% 25%;
     --input: 220 10% 10%;
-    --ring: 80 90% 50%;
+    --ring: 220 100% 50%;
 
     --error: theme(--color-rose-400);
   }
